--- a/public/index.html
+++ b/public/index.html
@@ -9,5 +9,10 @@
 </head>
 <body>
     <div id="app"></div>
+    <script>
+        if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.register('/sw.js');
+        }
+    </script>
 </body>
 </html>
